--- a/src/style.css
+++ b/src/style.css
@@ -1,64 +1,69 @@
-body{background:  url(img4.jpg)
+body{background:  url(/img/img4.jpg.jpeg);
+  background-color: black;
 } 
 
 /* Girl power */
 .logo{
-    width: 100%;
-    height: auto;
-    text-align: center;
-    margin-top: 50px; 
-    background-repeat:  no-repeat;
-    opacity: 0,2; 
+     width: 100% ;
+     height: auto ;
+     text-align: center ;
+     margin-top: 50px ; 
+     background-repeat:  no-repeat ;
+     opacity: 0,2 ; 
   }
 
- header{
-   color:  rgb(5, 54, 17);
-    font-size: 30px;
-    font-family: 'cursive';
-    text-align: center;   
+ header {
+     color:  rgb(5, 54, 17) ;
+     font-size: 30px ;
+     font-family: 'cursive' ;
+     text-align: center ;   
     }
 
  p{
-   color: rgb(243, 247, 243);
-    font-size: 30px;
-    font-family: 'cursive';
-    margin-top: 0em;
-    text-align: center;
+     color: rgb(243, 247, 243);
+     font-size: 30px;
+     font-family: 'cursive';
+     margin-top: 0em;
+     text-align: center;
   } 
+
   footer {
-    color: rgb(243, 243, 234);
-    font-size: 20px;
-    font-family: 'cursive';
-    margin-top: 3em;
-    text-align: center;
+     color: rgb(243, 243, 234);
+     font-size: 20px;
+     font-family: 'cursive';
+     margin-top: 3em;
+     text-align: center;
   }
+
   h1 {
-    color: rgb(195, 212, 43);
-    font-size: 25px;
-    font-family: 'cursive';
-    margin-top: 3%;
-    text-align: center;
+     color: rgb(195, 212, 43);
+     font-size: 25px;
+     font-family: 'cursive';
+     margin-top: 3%;
+     text-align: center;
     }
-      h2 {
-    color: rgb(195, 212, 43);
-    font-size: 28px;
-    font-family: 'cursive';
-    margin-top: 3%;
-    text-align: center;
+
+ h2 {
+     color: rgb(195, 212, 43);
+     font-size: 28px;
+     font-family: 'cursive';
+     margin-top: 3%;
+     text-align: center;
     }
-         h3 {
-    color: rgb(195, 212, 43);
-    font-size: 35px;
-    font-family: 'cursive';
-    margin-top: 3%;
-    text-align: center;
+ h3 {
+     color: rgb(195, 212, 43);
+     font-size: 35px;
+     font-family: 'cursive';
+     margin-top: 3%;
+     text-align: center;
     }
-         h4 {
-    color: rgb(246, 247, 241);
-    font-size: 28px;
-    font-family: 'cursive';
-    margin-top: 3%;
-    text-align: center;
+
+ h4 {
+     color: rgb(246, 247, 241);
+     font-size: 28px;
+     font-family: 'cursive';
+     margin-top: 3%;
+     text-align: center;
     }
 
 /* Bloque amarillo */
@@ -95,6 +100,7 @@ body{background:  url(img4.jpg)
   justify-content: center;
   flex-direction: column;
   width:  70% ;
+  background: #C2BE18;
   margin-left: 10% ;
   margin-top: 8%;
   padding-left: 5%;
@@ -126,9 +132,10 @@ select:hover,input[type="button"]:hover, input[type="date"] {
 input, textarea{
   margin-bottom: 12px;
   width: 20%;
+  color: rgb(255, 255, 255);
   box-sizing: border-box;
-  border: 1px solid;
-  font-size: 23px;  
+  border : 1px solid;
+  font-size : 23px;  
 }
 /* estilo para el boton de siguiente */
 input[type="button"] {
@@ -176,3 +183,5 @@ input[type="button"]:hover {
   left: 3px;
   top: 3px;
 }
+
+ 
