--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Girl power */
 body{
   /* overflow-y: hidden; */
-  background:  url(/img/img4.jpg);
+  background:  url(img/img4.jpg);
   background-color: black;
 } 
 
