--- a/style.css
+++ b/style.css
@@ -1,191 +1,45 @@
-/* Girl power */
-body{
-  /* overflow-y: hidden; */
-  background:  url(img/img4.jpg);
-  background-color: black;
-} 
-
-.logo{
+.modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
+  padding-top: 100px; 
+  left: 0;
+  top: 0;
   width: 100%;
+  height: 100%; 
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4); 
+}
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 60%;
+  border-radius: 15px;
+  font-family: 'Source Sans Pro';
+  font-weight: 400;
+  font-size: 0.8em;
+  color: black;
+}
+.div-about{
+  width: 30%;
   height: auto;
-  text-align: center;
-  margin-top: 50px; 
-  background-repeat:  no-repeat;
-  opacity: 0,2; 
-  border-radius: 10px;
+  background-color: rgb(211, 206, 206);
+  padding: 5px;
+  border-radius: 15px;
 }
-
-header {
-  margin-top: 0em;
-  color:  rgb(5, 54, 17);
-  font-size: 30px;
-  font-family: 'cursive';
-  text-align: center;   
-  border-radius: 10px;
+#type-pokemon{
+  text-decoration-color: rgba(37, 40, 56, 0.6);
 }
-
-p{
-  color: rgb(243, 247, 243);
-  font-size: 30px;
-  font-family: 'cursive';
-  margin-top: 0em;
-  text-align: center;
+.type {
+  background-color: transparent;
 }
-
-footer{
-  color: rgb(243, 243, 234);
-  font-size: 20px;
-  font-family: 'cursive';
-  padding-top: 0em;
-  text-align: center;
-}
-
-h1{
-  color: rgb(195, 212, 43);
-  font-size: 25px;
-  font-family: 'cursive';
-  margin-top: 3%;
-  text-align: center;
-}
-
-h2 {
-  color: rgb(195, 212, 43);
+/* boton cerrar modal */
+.close{
+  color: #aaaaaa;
+  float: right;
   font-size: 28px;
-  font-family: 'cursive';
-  margin-top: 1%;
-  text-align: center;
+  font-weight: bold;
 }
-
-h3{
-  color: rgb(195, 212, 43);
-  font-size: 35px;
-  font-family: 'cursive';
-  margin-top: 1%;
-  text-align: center;
-}
-
-h4{
-  color: rgb(246, 247, 241);
-  line-height: 0em;
-  font-size: 28px;
-  font-family: 'cursive';
-  margin-top: 1%;
-  text-align: center;
-}
-
-
-/* Bloque amarillo */
-#container{
-  width: 70%;
-  background: rgb(018,018,018);
-  margin-left: 10%;
-  margin-top: 1%;
-  padding: 2% 5% ;
-  border-radius: 10px;
-  opacity: 0.7; 
-  font-family: 'cursive';
-}
-
-/* contener segunda pantalla */
-#container2{  
-  width: 70%;
-  background: rgb(19, 19, 18);
-  margin-left: 10%;
-  margin-top: 8%;
-  padding: 2% 5%;
-  border-radius: 10px;
-  opacity: 0.7;
-  display:none;
-}
-
-/* contenedor tercera pantalla */
-#container3{
-  justify-content: center;
-  flex-direction: column;
-  width:  70%;
-  background-color:rgb(018,018,018);
-  margin-left: 10%;
-  margin-top: 8%;
-  padding: 2% 5%;
-  border-radius: 10px;
-  opacity: 0.8; 
-  display:none;
-}
-
-/* estilo para el boton
- de siguiente */
- input[type="button"]{
-  margin-left: 40%;
-  background-color: rgb(195, 212, 43);
-  color: black;
-  border: 1px solid , rgb(2, 2, 2);
-  font-size: 23px;
-  border-radius: 3px ;
-  font-family: 'cursive';
-}
-
-/* Letras dentro del contenedor */
-label{ 
-  display: block;
-  font-size: 23px;
-  font-family: 'cursive';
-  width: 100%;
-  color:rgb(195, 212, 43);
-}
-
-/* input del seleccionador */
-select{ 
-  margin-top: 10px;
-  font-size: 23px;
-}
-
-      
-
-input, textarea{
-  margin-bottom: 12px;
-  width: 20%;
-  color: black;
-  box-sizing: border-box;
-  border : 1px solid, rgb(2, 2, 2);
-  font-size : 23px;  
-}
-
-button[type="button"]{
-  color: black;
-  border: 1px solid , rgb(2, 2, 2);
-  font-size: 18px;
-  border-radius: 3px ;
-  margin-left: 1em;
-  padding: 0em 1em;
-  
-}
-
-input[type="password"]{
-  padding: 0em 1em;
-  display: inline-block;
-  
-}
-
-
-/* animacion para el boton de siguiente */
-input[type="button"]:hover{
-  background: #4A88F4;
-}
-
-button[type="button"]:hover{
- background: grey ;
-}
-
-/* OJO: las opciones desplazables están como select(no es input), en cambio la opción de fecha está como date y es un input */
-.final{
-  background-color:rgb(018,018,018);
-  opacity: 0.8;
-  border-radius: 10px;
-}
-
-/* animacion del cursos para los input */
-select:hover,input[type="button"]:hover, input[type="date"]:hover, button[type="button"]:hover{
-  cursor: pointer;
-}
-
- 
